# ai

./: .cursorignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  install.ps1  install.sh
.github/workflows/: release.yml
public/ai/: active-plan.md  active-research.md  ai-context.md  ai-guardrails.md  ai-summary.md
public/ai/template/: decision.md  plan.md  research.md
public/cursor/: hooks.json
public/cursor/agents/: researcher.md  verifier.md
public/cursor/commands/: adr.md  commit.md  implement.md  plan.md  research.md  review.md  sync.md
public/cursor/hooks/: extract-learnings.ps1  inject-context.ps1  post-edit-check.ps1
public/cursor/rules/: ai-guidelines.mdc  core-principles.mdc  security-patterns.mdc  three-phase-workflow.mdc
public/cursor/skills/architecture-decision/: SKILL.md
public/cursor/skills/code-review/: SKILL.md
public/cursor/skills/research-methodology/: SKILL.md
public/cursor/skills/security-audit/: SKILL.md
src/: main.rs
src/commands/: doctor.rs  init.rs  mod.rs  rate.rs  uninstall.rs  upgrade.rs
src/embed/: mod.rs
src/fs/: copy.rs  gitignore.rs  mod.rs
src/git/: detect.rs  mod.rs
src/upgrade/: github.rs
