[package]
name = "ai-init"
version = "0.1.0"
edition = "2021"
authors = ["RankJay"]
description = "CLI tool to initialize AI workflow templates in git repositories"
repository = "https://github.com/RankJay/ai"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
self-replace = "1"
dirs = "5"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
