[package]
name = "ai-init"
version = "0.1.0"
edition = "2021"
authors = ["RankJay"]
description = "CLI tool to initialize AI workflow templates in git repositories"
repository = "https://github.com/RankJay/ai"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.27"
self-replace = "1.5.0"
dirs = "6.0.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
